<resources>
    <string name="app_name">intern_test</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <!-- Strings used for fragments for navigation -->
    <string name="previous">Previous</string>


    <string name="welcome">Welcome</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="empty_list">Empty List</string>
</resources>