<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.screen2.SecondScreen">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:paddingStart="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_arrow_back_ios_new_24"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textAlignment="center"
            android:text="Second Screen"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/welcome"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"  />
    <TextView
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:textSize="22sp"
        android:id="@+id/tv_name"
        android:fontFamily="@font/poppins_semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/tv_selected_user"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="@string/selected_user_name"
        android:fontFamily="@font/poppins_bold"
        android:textSize="32sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_choose_user"
        android:layout_width="match_parent"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
        android:layout_marginHorizontal="32dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:backgroundTint="#2B637B"
        android:text="@string/choose_a_user"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>